--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base0.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Hello AdminController!{% endblock %}
 
@@ -13,8 +13,8 @@
 
     This friendly message is coming from:
     <ul>
-        <li>Your controller at <code>C:/Users/manna/TuniVibe/src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>C:/Users/manna/TuniVibe/templates/admin/index.html.twig</code></li>
+        <li>Your controller at <code>C:/Tunivibe-evenements/TuniVibe-abir/src/Controller/AdminController.php</code></li>
+        <li>Your template at <code>C:/Tunivibe-evenements/TuniVibe-abir/templates/admin/index.html.twig</code></li>
     </ul>
 </div>
 {% endblock %}
