--- a/templates/activites/new.html.twig
+++ b/templates/activites/new.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base2.html.twig' %}
+{% extends 'base3.html.twig' %}
 
 {% block title %}Nouvelle Activité{% endblock %}
 
 {% block body %}
     <div class="form-container">
-        <h1 class="form-title">➕ Création d'activité</h1>
+        <h1 class="form-title">Créer une nouvelle activité</h1>
 
         {{ form_start(form, {'attr': {'class': 'activity-form'}}) }}
             <div class="form-group">
@@ -110,7 +110,7 @@
         }
 
         .error-message {
-            color: #f56565;
+            color:rgb(245, 101, 101);
             font-size: 0.875rem;
             margin-top: 0.25rem;
             display: flex;
@@ -143,12 +143,12 @@
         }
 
         .validate-btn {
-            background: #48bb78;
+            background:rgb(65, 194, 199);
             color: white;
         }
 
         .validate-btn:hover {
-            background: #38a169;
+            background:rgb(56, 150, 161);
             transform: translateY(-1px);
         }
 
